# mcp_eval

./: .env.example  .gitignore  .mcp.json  FUNCTIONALITY.md  README.md  cleanup.sh  evaluation_config_influxdb.yaml  evaluation_config_sqlite.yaml  grafana-dashboard.json  grafana-mcp-evaluation-dashboard.json  grafana-simple-dashboard.json  opencode.json  pyproject.toml  setup_grafana.sh  setup_influxdb.sh
docs/: FUNCTIONALITY.md  POST_PROCESSING_FEATURE.md  agent_comparison.md  claude_arguments.md  claude_sementic_analysis.md  copilot_sementic_analysis.md  evaluation_plan.md  opencode_arguments.md  session_management_test.md  unified_session_strategy.md
exports/: evaluation_metrics_opencode_20250909_044621.csv
prompts/: 001.md  003.md  005.md  999.md  prompts_dataset.jsonl
prompts/backup_old_format/: 001.md  002.md  004.md  prompt.md
reports/: evaluation_metrics_20250909_044540.csv  evaluation_metrics_claude_20250909_044613.csv  evaluation_report_20250903_134929.csv  evaluation_report_20250903_141556.csv  evaluation_report_20250903_143226.csv  index.html  metadata.json
scripts/: setup_grafana.sh  setup_influxdb.sh
src/backup/: log_visualizer.py  post_processor.py
src/mcp_evaluation/: __init__.py  __main__.py  cli.py  evaluation_engine.py  jsonl_prompt_loader.py  log_visualizer.py  post_processing_engine.py  post_processor.py  prompt_loader.py  semantic_analyzer.py  session_manager.py  unified_agent.py  unified_post_processing.py  utils.py
tests/: test_prompt_loader.py  test_unified_agent.py
(+27 files in other folders)
